inventory-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-api-svc
spec:
  type: ClusterIP
  selector:
    app: inventory-api
  ports:
    - port: 80
      targetPort: 8080
