ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inventory-api-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoint: web
spec:
  ingressClassName: traefik
  rules:
    - host: inventory.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: inventory-api-svc
                port:
                  number: 80
